Fixed display bug causing double scrolling.

--- a/designer/src/app/app.component.scss
+++ b/designer/src/app/app.component.scss
@@ -14,3 +14,7 @@
 .flex .grow {
   flex: 1;
 }
+
+app-main-view {
+  overflow-y: auto; /* enable component scrolling */
+}
