--- a/designer/src/app/main-view/main-view.component.scss
+++ b/designer/src/app/main-view/main-view.component.scss
@@ -1,7 +1,5 @@
 #main-view {
   width: 100%;
-  height: 100%;
   background: darkgray;
   padding: 16px;
-  overflow-y: auto; /* enable component scrolling */
 }
