--- a/designer/src/app/page/page.component.scss
+++ b/designer/src/app/page/page.component.scss
@@ -1,6 +1,6 @@
 #page {
   width: 100%;
-  height: 150%;
+  min-height: 100vh;
   background: white; /* TODO: configurable */
   padding: 8px;
   display: flex;
